<resources>
    <string name="app_name">SMS_RC1</string>
    <string name="create_an_account">Create an account</string>
    <string name="enter">Enter</string>
    <string name="sign_in">Sign In</string>
    <string name="email_id">Email Id</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="full_name">Full Name</string>
    <string name="administrator">Administrator</string>
    <string name="create_new_admin">Create new admin !</string>
    <string name="super_admin">Super Admin</string>
    <string name="useradd">UserAdd</string>
    <string name="sign_out">Sign Out</string>
    <string name="home">Home</string>
    <string name="setting">Setting</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="feedback">Feedback</string>
    <string name="help">Help</string>
    <string name="save">Save</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="email">Email</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="website_url">Website url</string>
    <string name="street_address">Street Address</string>
    <string name="apartment_name">Apartment Name</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="postal_code">Postal code</string>
    <string name="manage">Manage</string>
    <string name="userprofile">UserProfile</string>
    <string name="student_get_started">Student</string>
    <string name="faculty_get_started">Faculty</string>
    <string name="who_are_you">Who are you ?</string>
    <string name="sid">Sid</string>
    <string name="student_identification_number">Student Identification Number</string>
    <string name="skip">Skip</string>
    <string name="security_check">Security Check !</string>
    <string name="registration_no">Org Registration No</string>
    <string name="next">Next</string>
    <string name="signout">SignOut</string>
    <string name="faculty_identification_no">Faculty identification no</string>
    <string name="fid">Fid</string>
    <string name="piyush_makwana">Piyush Makwana</string>
    <string name="insider0piyush_gmail_com">insider0piyush@gmail.com</string>
    <string name="students">Students</string>
    <string name="faculties">Faculties</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="account">Account</string>
    <string name="update">Update</string>
</resources>