<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin.AdminSignUp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/SignUpViewLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_an_account"
        android:textSize="32sp"
        android:textStyle="bold"
        android:layout_marginTop="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/AdminFullName"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:hint="@string/full_name"
        android:layout_marginTop="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignUpViewLabel">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/EditFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/AdminEmailId"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:hint="@string/email_id"
        android:layout_marginTop="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AdminFullName">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/EditEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/AdminPassword"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_marginTop="5dp"
        app:passwordToggleEnabled="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AdminEmailId">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/EditPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/AdminConfirmPassword"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:layout_marginTop="5dp"
        app:passwordToggleEnabled="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AdminPassword">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/EditConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignUp"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:text="@string/sign_up"
        android:translationZ="7dp"
        android:stateListAnimator="@null"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AdminConfirmPassword" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/alreadyHaveAnAccount"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/already_have_an_account"
        app:layout_constraintTop_toBottomOf="@+id/btnSignUp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        style="@style/Widget.Material3.Button.TextButton"/>
</androidx.constraintlayout.widget.ConstraintLayout>