<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin.home.user.login.Faculty">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/FacultyIcImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_faculty_ic"
        android:layout_marginTop="42dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/FacultyFid"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/FacultyFid"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:hint="@string/fid"
        android:layout_marginTop="42dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FacultyIcImage">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/EditFid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/FacultyEmailId"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:hint="@string/email_id"
        android:layout_marginTop="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FacultyFid">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/EditEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/FacultyPassword"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_marginTop="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FacultyEmailId">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/EditPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:text="@string/login"
        android:translationZ="7dp"
        android:stateListAnimator="@null"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FacultyPassword" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/ForgotPassword"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        style="@style/Widget.Material3.Button.TextButton"/>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:menu="@menu/common_menu"/>
        </com.google.android.material.appbar.AppBarLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.constraintlayout.widget.ConstraintLayout>